instructions.InstructionsDrawG.scala.error
Erreur de compilation :
InstructionsDrawG:1: error: not found: type Bleu
setCouleurBrosse(c:Bleu)
                   ^InstructionsDrawG:1: error: not found: value c
setCouleurBrosse(c:Bleu)
                 ^